--- a/app/views/urls/index.html.erb
+++ b/app/views/urls/index.html.erb
@@ -14,4 +14,4 @@
 <% end %>
 </table>
 <%= link_to "Shorten a Url!", new_url_path %><br>
-<%= link_to "Back",urls_path %>
+<%= link_to "Back",root_path %>
